fixed letter spacing

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -273,7 +273,7 @@ figure {
     }
     .carousel__container-right {
       h2 {
-        letter-spacing: -2px;
+        /*letter-spacing: -2px;*/
       }
     }
   }
